corrected several comments from the mentor, added several constants